# crate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
crate/: analyzer.py  cli.py  gui.py  scanner.py  stems.py  tagger.py
